src/__tests__/fixtures/error/Button.tsx
import styles from './Button.module.css';

export const Button: React.FC<React.PropsWithChildren> = ({ children }) => (
  <button type="button" className={styles.base}>
    {children}
  </button>
);
